# tg_bot_with_roles

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/bot/: filters.py  handlers.py  middlewares.py
src/core/: celery_app.py  config.py  lifespan.py  logger.py
src/db/: base.py  crud.py  db_helper.py  models.py
src/schemas/: newsletter.py
src/tasks/: newsletter.py
